[gd_scene load_steps=17 format=3 uid="uid://djknqcyrdgn2p"]

[ext_resource type="Script" path="res://examples/diablo_like/player/diablo_like_player.gd" id="1_g6foi"]
[ext_resource type="Script" path="res://addons/godot_gameplay_systems/attributes_and_abilities/nodes/ability_container.gd" id="2_nkd2m"]
[ext_resource type="Script" path="res://addons/godot_gameplay_systems/attributes_and_abilities/nodes/gameplay_attribute_map.gd" id="3_avg8u"]
[ext_resource type="Script" path="res://addons/godot_gameplay_systems/attributes_and_abilities/resources/attribute.gd" id="4_8ia2c"]
[ext_resource type="Resource" uid="uid://b6c0giv6vxbtg" path="res://examples/diablo_like/diablo_like_attributes.tres" id="5_t34fp"]
[ext_resource type="Texture2D" uid="uid://dko7n1fbq1a24" path="res://examples/simple_2d_platformer/kenney_pixelplatformer/Characters/character_0000.png" id="6_sro3k"]
[ext_resource type="PackedScene" uid="uid://cj6dayrto8j20" path="res://examples/diablo_like/player/hud/diablo_like_hud.tscn" id="7_u8gkm"]
[ext_resource type="Script" path="res://addons/godot_gameplay_systems/inventory_system/nodes/inventory.gd" id="8_o5wxr"]
[ext_resource type="Script" path="res://addons/godot_gameplay_systems/inventory_system/nodes/equipment.gd" id="9_qa5o5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wj50h"]

[sub_resource type="Resource" id="Resource_ry6uo"]
script = ExtResource("4_8ia2c")
attribute_name = "strength"
minimum_value = 0.0
maximum_value = 0.0
current_value = 0.0

[sub_resource type="Resource" id="Resource_3uq4l"]
script = ExtResource("4_8ia2c")
attribute_name = "dexterity"
minimum_value = 0.0
maximum_value = 0.0
current_value = 0.0

[sub_resource type="Resource" id="Resource_ryq53"]
script = ExtResource("4_8ia2c")
attribute_name = "intelligence"
minimum_value = 0.0
maximum_value = 0.0
current_value = 0.0

[sub_resource type="Resource" id="Resource_yfoqh"]
script = ExtResource("4_8ia2c")
attribute_name = "mana"
minimum_value = 0.0
maximum_value = 0.0
current_value = 0.0

[sub_resource type="Resource" id="Resource_2q0be"]
script = ExtResource("4_8ia2c")
attribute_name = "health"
minimum_value = 0.0
maximum_value = 0.0
current_value = 0.0

[sub_resource type="Resource" id="Resource_jc364"]
script = ExtResource("4_8ia2c")
attribute_name = "damage"
minimum_value = 0.0
maximum_value = 0.0
current_value = 0.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_g6foi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_wj50h")

[node name="AbilityContainer" type="Node" parent="."]
script = ExtResource("2_nkd2m")
gameplay_attribute_map_path = NodePath("../GameplayAttributeMap")

[node name="GameplayAttributeMap" type="Node" parent="."]
script = ExtResource("3_avg8u")
attributes = Array[ExtResource("4_8ia2c")]([SubResource("Resource_ry6uo"), SubResource("Resource_3uq4l"), SubResource("Resource_ryq53"), SubResource("Resource_yfoqh"), SubResource("Resource_2q0be"), SubResource("Resource_jc364")])
table = ExtResource("5_t34fp")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("6_sro3k")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="DiabloLikeHud" parent="." instance=ExtResource("7_u8gkm")]

[node name="Inventory" type="Node" parent="."]
script = ExtResource("8_o5wxr")

[node name="Equipment" type="Node" parent="."]
script = ExtResource("9_qa5o5")
